# ghost

./: Cargo.toml  README.md  invoker.mro  pipeline.mro  stage.mro
data/: gencode_sm.fa  small_r1.fastq  small_r2.fastq
src/: build_index.rs  correct_barcodes.rs  count_umi.rs  main.rs  map_reads.rs
