[package]
name = "ghost"
version = "0.1.0"
authors = ["Nick <nickceglia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

docopt = "1.0"
serde = { version = "1.0", features = ["derive"] }
martian = {git = "https://github.com/martian-lang/martian-rust.git"}
martian-derive = {git = "https://github.com/martian-lang/martian-rust.git"}
bio =  "0.29"
failure = "0.1"
rayon = "1.0.3"
crossbeam = "0.4"
crossbeam-utils = "0.6"
boomphf = "0.5"

[dependencies.debruijn]
git = "https://github.com/10XGenomics/rust-debruijn"
branch = "master"

[dependencies.debruijn_mapping]
git = "https://github.com/10XGenomics/rust-pseudoaligner"
branch = "master"
